--- a/sass/components/_portfolio-posters.scss
+++ b/sass/components/_portfolio-posters.scss
@@ -44,8 +44,7 @@
     @media screen and (min-width: $tablet) and (max-width: 1199px) {
     width: 354px;
     display: flex;
-    }
-}
+    }}
 
     /* posters a*/
     .posters-a {
