--- a/sass/components/_body.scss
+++ b/sass/components/_body.scss
@@ -5,18 +5,19 @@
     margin-left: auto;
     margin-right: auto;
 
-    @media screen and (min-width: $mobile) {
-       width: $mobile; 
-       overflow:hidden;
+    @media screen and (min-width: 480px) and (max-width: 767px) {
+    width: $mobile; 
+    overflow:hidden;
     }
     
-    @media screen and (min-width: $tablet) {
-        width: $tablet; 
-      overflow:hidden;
+    @media screen and (min-width: $tablet) and (max-width: 1199px) {
+    width: $tablet; 
+    overflow:hidden;
      }
      
     @media screen and (min-width: $desktop) {
-        width: $desktop; 
+    width: $desktop; 
+    // overflow:hidden;
      }
     }
     /* Icon */
