--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -27,7 +27,6 @@
   }
 
   .menu-container {
-    height: 100vh;
     background-color: $white;
     padding: 20px;
      font-size: 20px;
@@ -38,6 +37,7 @@
         top: 100%;
         left: 0;
         width: 100%;
+        height: 100vh;
         &.is-open {
         display: block;
     }
@@ -47,4 +47,10 @@
       gap: 95px;
       padding: 0;
     }
-  }
+
+    @media screen and (min-width: $desktop) {
+      padding: 0;
+      display: flex;
+      gap: 95px;
+
+  }}
