--- a/css/main.css
+++ b/css/main.css
@@ -740,6 +740,7 @@ img {
   background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/bg.jpg);
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg.jpg);
   background-repeat: no-repeat;
+  background-position: 50%;
   background-size: 1600px 600px;
   padding-top: 200px;
   padding-bottom: 200px;
