--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -106,6 +106,9 @@
     @media screen and (max-width: 767px) {
     display: flex;
     justify-content: center;
+    left: 50%;
+    transform: translateX(15%);
+
     }
     @media screen and (min-width: 768px) and (max-width: 1199px) {
     display: flex;
@@ -196,6 +199,7 @@
     @media screen and (max-width: 767px) {
     width: 450px;
     margin-bottom: 20px;
+    margin-right: 0;
     }
     @media screen and (min-width: 768px) and (max-width: 1199px) {
     width: 450px;
