--- a/sass/components/_site-nav.scss
+++ b/sass/components/_site-nav.scss
@@ -21,6 +21,8 @@
       @media screen and (min-width: $desktop) {
         align-items: baseline;
         justify-content: flex-start;
+        align-items: center;
+        height: 80px;
     }}
 
     /* Webstudio logo */
@@ -37,8 +39,7 @@
     }
  /* Webstudio logo Desk */
     @media screen and (min-width: $desktop) {
-      top: 50%;
-      transform: translateY(50%);
+
       margin-left: 115px;
   }}
 
@@ -89,16 +90,17 @@
     font-size: 40px;
     line-height: 1.17;
     letter-spacing: 0.02em;
-    display: block;
+    padding: 0;
+    padding-bottom: 35px;
+    display: flex;
+
     }
     @media screen and (min-width: $tablet) and (max-width: 1199px) {
       padding: 0;
     }
     @media screen and (min-width: $desktop) {
-      top: 50%;
-      transform: translateY(50%);
       padding: 0;
-      display: flex;
+      position: relative;
   }
 }
 
@@ -106,6 +108,9 @@
     .site-nav__current {
     color: $blue;
 
+    @media screen and (min-width: $tablet) and (max-width: 1199px) {
+    position: relative;
+    }
     /* Current page :after */
     &::after {
     content: '';
@@ -121,14 +126,10 @@
       background: none;
      }
      @media screen and (min-width: $tablet) and (max-width: 1199px) {
-      background: none;
-      // background: none;
-      // width: 75px;
-      // left: 95px;
-      // bottom: -25px;
+      bottom: -24px;
      }
      @media screen and (min-width: $desktop) {
-      bottom: -20px;
+      bottom: -34px;
     }}}
 
     /* Site nav contacts */
@@ -152,6 +153,7 @@
   letter-spacing: 0.02em;
   }}
 
+
     /* Site nav contacts icon margin */
     .site-nav__svg {
     margin-right: 10px;
@@ -170,7 +172,9 @@ letter-spacing: 0.02em;
 color: $blue;
 }
 @media screen and (min-width: 767px) and (max-width: 1199px) {
- padding-top: 10px;
+  padding: 0;
+ margin-top: 10px;
+ justify-content: center;
 }}
 
 /* Site nav ul tab */
@@ -192,7 +196,6 @@ letter-spacing: 0.02em;
 @media screen and (min-width: $desktop) {
   display: flex;
   gap: 30px;
-  padding-top: 15px;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
