--- a/css/main.css
+++ b/css/main.css
@@ -306,11 +306,22 @@ img {
   max-width: 100%;
   height: auto;
 }
+@media screen and (min-width: 1200px) {
+  img {
+    width: 100%;
+  }
+}
 
 /* Section padding */
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
+}
+@media screen and (max-width: 767px) {
+  .section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
 }
 
 /* Hide H1 */
@@ -342,6 +353,7 @@ img {
           transition-duration: 250ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 200;
 }
 .menu-button:hover, .menu-button:focus {
   fill: #2196F3;
@@ -350,11 +362,6 @@ img {
   .menu-button {
     display: none;
   }
-}
-
-.menu-button .icon-menu,
-.menu-button .icon-cross {
-  fill: #212121;
 }
 
 .menu-button .icon-cross {
@@ -371,21 +378,22 @@ img {
 
 .menu-container {
   background-color: #FFFFFF;
-  padding: 20px;
+  padding-left: 40px;
   font-size: 20px;
 }
 @media screen and (max-width: 767px) {
   .menu-container {
     display: none;
     position: absolute;
-    top: 100%;
     left: 0;
     width: 100%;
     height: 100vh;
   }
   .menu-container.is-open {
     display: block;
-    z-index: 999;
+    z-index: 100;
+    top: 0;
+    padding-top: 50px;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
@@ -490,7 +498,6 @@ img {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    padding-left: 20px;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
@@ -653,9 +660,6 @@ img {
   .site-nav__number {
     padding: 0;
     margin-top: 10px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
   }
 }
 
@@ -709,7 +713,6 @@ img {
     display: -ms-flexbox;
     display: flex;
     gap: 20px;
-    padding-left: 20px;
     padding-top: 64px;
     font-weight: 500;
     font-size: 18px;
@@ -994,6 +997,12 @@ img {
   margin: 0;
   margin-top: 20px;
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .modal-submit__label {
@@ -1013,7 +1022,6 @@ img {
   width: 16px;
   height: 15px;
   position: absolute;
-  margin-left: 19px;
   /* Agree svg hover + focus */
 }
 .modal-submit__input:checked ~ .modal-submit__svg {
@@ -1023,8 +1031,6 @@ img {
 
 /* Agree check */
 .modal-submit__span {
-  margin-left: 14px;
-  margin-right: 7px;
   width: 16px;
   height: 15px;
 }
@@ -1052,11 +1058,8 @@ img {
 .modal-submit__submit {
   width: 200px;
   height: 50px;
-  margin: 0;
-  padding: 0;
-  margin-top: 30px;
-  -webkit-transform: translateX(50%);
-          transform: translateX(50%);
+  display: block;
+  margin: 30px auto 0;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
